--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       font-weight: bold;
     }
 
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: 400px) {
       td {
         width: 50px;
         height: 50px;
@@ -134,7 +134,7 @@
       <td onclick="cal('1')">1</td>
       <td onclick="cal('2')">2</td>
       <td onclick="cal('3')">3</td>
-      <td onclick="cal('-')">−</td>
+      <td onclick="cal('-')">-</td>
     </tr>
     <tr>
       <td onclick="cal('0')">0</td>
